# tbar

./: Cargo.toml  LICENSE  README.md  build.sh
configs/: _template.rs  compact-bar.rs  minimal.rs
src/: component.rs  composer.rs  config.rs  error.rs  main.rs  mode.rs  options.rs  parser.rs  style.rs  tab.rs  tokenizer.rs
src/component/: mod.rs  session_name.rs  style.rs  text.rs  traits.rs
