[package]
name = "foobar"
version = "0.1.0"
authors = ["Vladyslav Kotliar <kotliarvladyslav@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
color-print = "0.3.4"
handlebars = "4.3.7"
serde_json = "1.0.97"
zellij-tile = "*"
zellij-tile-utils = "*"
